finished print styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="screen-hide">
+    <div class="screen-hide-top">
       <img src="GrimesLogo.svg" alt="Grimes Logo" />
       <p>: PRICE QUOTE</p>
       <aside id="todays-date" class="quote-date"></aside>
@@ -194,120 +194,131 @@
         </div>
       </div>
 
-      <h1 class="rightSize">Price Information</h1>
+      <h1 class="rightSize rightSize--print">Price Information</h1>
 
       <div class="row rightSize">
-        <hr />
-        <p id="qty1" data-name="12" class="leftP">12 or more</p>
-        <p class="rightP">$<span id="cost1">0.00</span></p>
-        <select name="12" id="adj1" class="adjust">
-          <option value="-0.40">- 0.40</option>
-          <option value="-0.30">- 0.30</option>
-          <option value="-0.20">- 0.20</option>
-          <option value="-0.10">- 0.10</option>
-          <option value="0" selected="selected"></option>
-          <option value="0.10">+ 0.10</option>
-          <option value="0.20">+ 0.20</option>
-          <option value="0.30">+ 0.30</option>
-          <option value="0.40">+ 0.40</option>
-        </select>
+        <div class="price-side">
+          <hr />
+          <p id="qty1" data-name="12" class="leftP">12 or more</p>
+          <p class="rightP">$<span id="cost1">0.00</span></p>
+          <select name="12" id="adj1" class="adjust">
+            <option value="-0.40">- 0.40</option>
+            <option value="-0.30">- 0.30</option>
+            <option value="-0.20">- 0.20</option>
+            <option value="-0.10">- 0.10</option>
+            <option value="0" selected="selected"></option>
+            <option value="0.10">+ 0.10</option>
+            <option value="0.20">+ 0.20</option>
+            <option value="0.30">+ 0.30</option>
+            <option value="0.40">+ 0.40</option>
+          </select>
 
-        <hr />
-        <p id="qty2" data-name="18" class="leftP">18 or more</p>
-        <p class="rightP">$<span id="cost2">0.00</span></p>
-        <select name="18" id="adj2" class="adjust">
-          <option value="-0.40">- 0.40</option>
-          <option value="-0.30">- 0.30</option>
-          <option value="-0.20">- 0.20</option>
-          <option value="-0.10">- 0.10</option>
-          <option value="0" selected="selected"></option>
-          <option value="0.10">+ 0.10</option>
-          <option value="0.20">+ 0.20</option>
-          <option value="0.30">+ 0.30</option>
-          <option value="0.40">+ 0.40</option>
-        </select>
+          <hr />
+          <p id="qty2" data-name="18" class="leftP">18 or more</p>
+          <p class="rightP">$<span id="cost2">0.00</span></p>
+          <select name="18" id="adj2" class="adjust">
+            <option value="-0.40">- 0.40</option>
+            <option value="-0.30">- 0.30</option>
+            <option value="-0.20">- 0.20</option>
+            <option value="-0.10">- 0.10</option>
+            <option value="0" selected="selected"></option>
+            <option value="0.10">+ 0.10</option>
+            <option value="0.20">+ 0.20</option>
+            <option value="0.30">+ 0.30</option>
+            <option value="0.40">+ 0.40</option>
+          </select>
 
-        <hr />
-        <p id="qty3" data-name="24" class="leftP">24 or more</p>
-        <p class="rightP">$<span id="cost3">0.00</span></p>
-        <select name="24" id="adj3" class="adjust">
-          <option value="-0.40">- 0.40</option>
-          <option value="-0.30">- 0.30</option>
-          <option value="-0.20">- 0.20</option>
-          <option value="-0.10">- 0.10</option>
-          <option value="0" selected="selected"></option>
-          <option value="0.10">+ 0.10</option>
-          <option value="0.20">+ 0.20</option>
-          <option value="0.30">+ 0.30</option>
-          <option value="0.40">+ 0.40</option>
-        </select>
+          <hr />
+          <p id="qty3" data-name="24" class="leftP">24 or more</p>
+          <p class="rightP">$<span id="cost3">0.00</span></p>
+          <select name="24" id="adj3" class="adjust">
+            <option value="-0.40">- 0.40</option>
+            <option value="-0.30">- 0.30</option>
+            <option value="-0.20">- 0.20</option>
+            <option value="-0.10">- 0.10</option>
+            <option value="0" selected="selected"></option>
+            <option value="0.10">+ 0.10</option>
+            <option value="0.20">+ 0.20</option>
+            <option value="0.30">+ 0.30</option>
+            <option value="0.40">+ 0.40</option>
+          </select>
 
-        <hr />
-        <p id="qty4" data-name="36" class="leftP">36 or more</p>
-        <p class="rightP">$<span id="cost4">0.00</span></p>
-        <select name="36" id="adj4" class="adjust">
-          <option value="-0.40">- 0.40</option>
-          <option value="-0.30">- 0.30</option>
-          <option value="-0.20">- 0.20</option>
-          <option value="-0.10">- 0.10</option>
-          <option value="0" selected="selected"></option>
-          <option value="0.10">+ 0.10</option>
-          <option value="0.20">+ 0.20</option>
-          <option value="0.30">+ 0.30</option>
-          <option value="0.40">+ 0.40</option>
-        </select>
+          <hr />
+          <p id="qty4" data-name="36" class="leftP">36 or more</p>
+          <p class="rightP">$<span id="cost4">0.00</span></p>
+          <select name="36" id="adj4" class="adjust">
+            <option value="-0.40">- 0.40</option>
+            <option value="-0.30">- 0.30</option>
+            <option value="-0.20">- 0.20</option>
+            <option value="-0.10">- 0.10</option>
+            <option value="0" selected="selected"></option>
+            <option value="0.10">+ 0.10</option>
+            <option value="0.20">+ 0.20</option>
+            <option value="0.30">+ 0.30</option>
+            <option value="0.40">+ 0.40</option>
+          </select>
 
-        <hr />
-        <p id="qty5" data-name="48" class="leftP">48 or more</p>
-        <p class="rightP">$<span id="cost5">0.00</span></p>
-        <select name="48" id="adj5" class="adjust">
-          <option value="-0.40">- 0.40</option>
-          <option value="-0.30">- 0.30</option>
-          <option value="-0.20">- 0.20</option>
-          <option value="-0.10">- 0.10</option>
-          <option value="0" selected="selected"></option>
-          <option value="0.10">+ 0.10</option>
-          <option value="0.20">+ 0.20</option>
-          <option value="0.30">+ 0.30</option>
-          <option value="0.40">+ 0.40</option>
-        </select>
+          <hr />
+          <p id="qty5" data-name="48" class="leftP">48 or more</p>
+          <p class="rightP">$<span id="cost5">0.00</span></p>
+          <select name="48" id="adj5" class="adjust">
+            <option value="-0.40">- 0.40</option>
+            <option value="-0.30">- 0.30</option>
+            <option value="-0.20">- 0.20</option>
+            <option value="-0.10">- 0.10</option>
+            <option value="0" selected="selected"></option>
+            <option value="0.10">+ 0.10</option>
+            <option value="0.20">+ 0.20</option>
+            <option value="0.30">+ 0.30</option>
+            <option value="0.40">+ 0.40</option>
+          </select>
 
-        <hr />
-        <p id="qty6" data-name="60" class="leftP">60 or more</p>
-        <p class="rightP">$<span id="cost6">0.00</span></p>
-        <select name="60" id="adj6" class="adjust">
-          <option value="-0.40">- 0.40</option>
-          <option value="-0.30">- 0.30</option>
-          <option value="-0.20">- 0.20</option>
-          <option value="-0.10">- 0.10</option>
-          <option value="0" selected="selected"></option>
-          <option value="0.10">+ 0.10</option>
-          <option value="0.20">+ 0.20</option>
-          <option value="0.30">+ 0.30</option>
-          <option value="0.40">+ 0.40</option>
-        </select>
+          <hr />
+          <p id="qty6" data-name="60" class="leftP">60 or more</p>
+          <p class="rightP">$<span id="cost6">0.00</span></p>
+          <select name="60" id="adj6" class="adjust">
+            <option value="-0.40">- 0.40</option>
+            <option value="-0.30">- 0.30</option>
+            <option value="-0.20">- 0.20</option>
+            <option value="-0.10">- 0.10</option>
+            <option value="0" selected="selected"></option>
+            <option value="0.10">+ 0.10</option>
+            <option value="0.20">+ 0.20</option>
+            <option value="0.30">+ 0.30</option>
+            <option value="0.40">+ 0.40</option>
+          </select>
 
-        <hr />
-        <p class="leftP">Add for 2XL</p>
-        <p class="rightP">+$<span id="xxl">0.00</span></p>
+          <hr />
+          <p class="leftP">Add for 2XL</p>
+          <p class="rightP">+$<span id="xxl">0.00</span></p>
 
-        <hr />
-        <p class="leftP">Total Cost w/tax <span class="small">(for lowest qty.)</span></p>
-        <p class="rightP">$<span id="total">0.00</span></p>
+          <hr />
+          <p class="leftP">Total Cost w/tax <span class="small">(for lowest qty.)</span></p>
+          <p class="rightP">$<span id="total">0.00</span></p>
 
-        <hr />
-        <p class="leftP">Est. Print Time <span class="small">(for lowest qty.)</span></p>
-        <p class="rightP"><span id="time">0:00</span></p>
+          <hr />
+          <p class="leftP">Est. Print Time <span class="small">(for lowest qty.)</span></p>
+          <p class="rightP"><span id="time">0:00</span></p>
 
-        <hr />
-        <p class="leftP">Digitize Fee</p>
-        <p class="rightP">$<span id="costDig">0</span>.00</p>
+          <hr />
+          <p class="leftP">Digitize Fee</p>
+          <p class="rightP">$<span id="costDig">0</span>.00</p>
 
-        <hr />
+          <hr />
 
-        <a class="help" href="help.html">Need help? Click here.</a>
+          <a class="help" href="help.html">Need help? Click here.</a>
 
-        <button id="submit">Calculate</button>
+          <button id="submit">Calculate</button>
+        </div>
+        <div class="info-side">
+          <p>
+            <b>Grimes Graphics</b><br />
+            7800 Biggs Ford Road, Unit 3B <br />
+            Frederick, MD 21701<br />
+            (301) 898-0024<br />
+            email@grimes.graphics
+          </p>
+        </div>
       </div>
     </div>
 
