updated to use new heat-app pricing system

--- a/help.html
+++ b/help.html
@@ -12,7 +12,8 @@
     <div class="head-wrapper">
       <h1>Pricing Calculator Readme</h1>
 
-      <p>This file contains explanations of how the program works. Last edited on October 31, 2019.</p>
+      <p>This file contains explanations of how the program works. Last edited on December 23, 2020.</p>
+      <a href="index.html">Return to Pricing Calculator</a>
     </div>
 
     <div class="wrapper">
@@ -80,11 +81,14 @@
 
         <ul>
           <li>
+            The checkbox is used to price two-color heat-application. It doubles the cost for the materials and adds an extra 50% to the application cost.
+          </li>
+          <li>
             If you just type in a value for the Height, it will still work. It assumes you're using the full roll width.
           </li>
           <li>
             The values for the preset options are contained in the tag that starts with
-            <code>&lt;select id="heatPresets" class="leftSelect widthOne"&gt;</code>
+            <code>&lt;select id="heatPresets" class="leftSelect widthOne"&gt;</code> There's a duplicate list of preset prices a few lines down in the code, so make sure to change the values in both locations.
           </li>
         </ul>
 
