--- a/index.html
+++ b/index.html
@@ -156,41 +156,33 @@
         <div class="row">
           <select id="heatPresets1" class="leftSelect widthOne">
             <option value="0" selected="selected">1st App. Presets</option>
-            <option value="4">Name &amp; Number</option>
-            <option value="2">2" Name or 8" Number</option>
-            <option value="1.4">6" Number</option>
-            <option value="0.8">4" Number</option>
-            <option value="0.6">1" Name</option>
-            <option value="1.2">Team Name (3 x 12")</option>
-            <option value="7.8">Name &amp; Number (2-color)</option>
-            <option value="3.4">2" Name (2-color)</option>
-            <option value="4.4">8" Number (2-color)</option>
-            <option value="3.2">6" Number (2-color)</option>
-            <option value="2.0">4" Number (2-color)</option> </select
-          ><!--
+            <option value="5.2">Name &amp; Number</option>
+            <option value="2.4">2" Name</option>
+            <option value="2.8">8" Number</option>
+            <option value="2.4">6" Number</option>
+            <option value="2">4" Number</option>
+            <option value="1.6">1" Name</option>
+            <option value="2.8">Team Name (4 x 12")</option>
+          </select><!--
+          --><input type="checkbox" id="twoColor1" class="checkbox" title="Check for 2-color application." /><!--
 					--><input id="height1" class="widthHA" placeholder="Height" /><!--
 					--><input id="width1" class="widthHA" placeholder="Width" /><!--
-					--><input id="decal1" class="widthHA" placeholder="Decal" /><!--
-          --><input type="checkbox" id="decalMark1" class="checkbox" title="Check to add markup." checked />
+					--><input id="decal1" class="widthHA" placeholder="Transfer" />
 
           <select id="heatPresets2" class="leftSelect widthOne">
             <option value="0" selected="selected">2nd App. Presets</option>
-            <option value="4">Name &amp; Number</option>
-            <option value="2">2" Name or 8" Number</option>
-            <option value="1.4">6" Number</option>
-            <option value="0.8">4" Number</option>
-            <option value="0.6">1" Name</option>
-            <option value="1.2">Team Name (3 x 12")</option>
-            <option value="7.8">Name &amp; Number (2-color)</option>
-            <option value="3.4">2" Name (2-color)</option>
-            <option value="4.4">8" Number (2-color)</option>
-            <option value="3.2">6" Number (2-color)</option>
-            <option value="2.0">4" Number (2-color)</option> </select
-          ><!--
+            <option value="5.2">Name &amp; Number</option>
+            <option value="2.4">2" Name</option>
+            <option value="2.8">8" Number</option>
+            <option value="2.4">6" Number</option>
+            <option value="2">4" Number</option>
+            <option value="1.6">1" Name</option>
+            <option value="2.8">Team Name (4 x 12")</option>
+          </select><!--
+          --><input type="checkbox" id="twoColor2" class="checkbox" title="Check for 2-color application." /><!--
 					--><input id="height2" class="widthHA" placeholder="Height" /><!--
 					--><input id="width2" class="widthHA" placeholder="Width" /><!--
-					--><input id="decal2" class="widthHA" placeholder="Decal" /><!--
-          --><input type="checkbox" id="decalMark2" class="checkbox" title="Check to add markup." checked />
+					--><input id="decal2" class="widthHA" placeholder="Transfer" />
         </div>
       </div>
 
